# gitlab_review_bot

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
ci/: lint.gitlab-ci.yml  release.gitlab-ci.yml  review.gitlab-ci.yml  test.gitlab-ci.yml
examples/: review-bot.example.yml
review_bot/: __init__.py  batching.py  cli.py  config.py  describe.py  describe_cli.py  diff_parser.py  exclude_rules.py  gitlab_client.py  llm.py  logging_setup.py  prompts.py  retry.py  reviewer.py
scripts/: vendor-wheels.sh
tests/: conftest.py  test_batching.py  test_config.py  test_describe_cli.py  test_diff_parser.py  test_exclude_rules.py  test_gitlab_client.py  test_llm.py  test_logging_setup.py  test_retry.py  test_review_cli.py
wheels/: openai-2.47.0-py3-none-any.whl  tqdm-4.69.0-py3-none-any.whl
