[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitlab-review-bot"
version = "0.1.0"
description = "AI-powered GitLab merge request review bot using an internal vLLM (OpenAI-compatible) service"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "nhm0819" }]
dependencies = [
    "openai>=1.30.0",
    "requests>=2.31.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
gitlab-review-bot = "review_bot.cli:main"
gitlab-mr-describe = "review_bot.describe_cli:main"

[tool.setuptools]
packages = ["review_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# tests/ is on sys.path so the shared conftest helpers can be imported directly.
pythonpath = ["tests"]
addopts = "-q"
